Edited wiki page through web user interface.

--- a/wiki/PyGEPIntro.wiki
+++ b/wiki/PyGEPIntro.wiki
@@ -6,18 +6,18 @@ _Latest release: PyGEP-0.1-beta_
 
 PyGEP is a simple library suitable for academic study of GEP (Gene Expression Programming) in Python, aiming for ease of use and rapid implementation.
 
- It provides standard multigenic chromosomes; a population class using elitism and fitness scaling for selection; mutation, crossover and transposition operators; and some standard GEP functions and linkers.
-
 = What does it do? =
 
 PyGEP provide an implementation of most standard GEP components:
-  * Unigenic and multigenic chromosomes and evaluation
-  * Populations and generational cycling
-  * Mutation, crossover, and transposition operators
-  * Function libraries for arithmetic, logic and comparison
-  * Multigenic linkers
+  * Unigenic and multigenic [wiki:ApiChromosomes chromosomes]
+  * [wiki:ApiPopulations Populations] and generational cycling
+  * Mutation, crossover, and transposition [wiki:ApiVariation operators]
+  * [wiki:ApiFunctionLibraries Function libraries] for arithmetic, logic and comparison
+  * Multigenic [wki:ApiLinkers linker functions]
 
 = How do I use it? =
 
 There are a couple [http://pygep.googlecode.com/svn/tags/pygep-0.1-beta/src/demo/ demos] available based on those in [http://gene-expression-programming.com/GEPBiblio.asp the papers of Ferreira].  Check back here soon for a [wiki:SymbolicRegressionTutorial tutorial].
+
+
 
