--- a/wiki/PyGEPIntro.wiki
+++ b/wiki/PyGEPIntro.wiki
@@ -11,13 +11,11 @@ PyGEP is a simple library suitable for academic study of GEP (Gene Expression Pr
 PyGEP provide an implementation of most standard GEP components:
   * ApiChromosomes: unigenic and multigenic chromosomes
   * ApiPopulations: populations and generational cycling
-  * ApiVariation: mutation, crossover, and transposition operators
   * ApiFunctionLibraries: libraries for arithmetic, logic and comparison non-terminal functions
   * ApiLinkers: multigenic linker functions
 
 = How do I use it? =
 
-There are a couple [http://pygep.googlecode.com/svn/tags/pygep-0.1-beta/src/demo/ demos] available based on those in [http://gene-expression-programming.com/GEPBiblio.asp the papers of Ferreira].  Check back here soon for a SymbolicRegressionTutorial.
-
+There are a couple [http://pygep.googlecode.com/svn/tags/pygep-0.1-beta/src/demo/ demos] available based on those in [http://gene-expression-programming.com/GEPBiblio.asp the papers of Ferreira].  For a quick start see the SymbolicRegressionTutorial.
 
 
