--- a/wiki/SymbolicRegressionTutorial.wiki
+++ b/wiki/SymbolicRegressionTutorial.wiki
@@ -3,8 +3,8 @@
 = Introduction =
 Symbolic regression is a common GEP demonstration.  For this one we'll consider the regression.py demo in PyGEP's source repository.
 
-= Details =
-== Step 1: Defines the target function ==
+= Writing our Gene Expression Program =
+== Step 1: Define the target function ==
 First we define our target function (in this case f(x) = 3x^2^ + 2x + 1) and a class to represent data points.  Note this class has two attributes: `x`, the given value, and `y`, the target value.
 {{{
 #!/usr/bin/env python2.5
@@ -29,7 +29,7 @@ class DataPoint(object):
 }}}
 
 == Step 2: Create a chromosome and fitness function ==
-The functions for our Regression chromosome are imported from `pygep.functions.arithmetic` .  We allow these functions to operate on `x` attribute of data points and the constants 1 and 2.  The fitness of a given chromosome is its accuracy in determining a data point's `y` value.  We've found an optimal solution if all sample points are predicted exactly.
+We import functions for our Regression chromosome `pygep.functions.arithmetic` and allow these functions to operate on the `x` attribute of data points and the constants 1 and 2.  The fitness of a given chromosome is its accuracy in determining all data points' `y` values in our sample.  We've found an optimal solution if all sample points are predicted exactly.
 {{{
 # The chromsomes: fitness is accuracy over the sample
 SELECTION_RANGE = 100.0
@@ -50,7 +50,7 @@ class Regression(Chromosome):
 }}}
 
 == Step 3: Create a population and run it against our sample ==
-Here we create a sample of data points and initialize a Population of Regression chromosomes with size 20, head length 6, 3 genes per chromosome, and using the sum linker.  We cycle the population for 50 generations, or until it finds an optimal solution.
+Here we create a sample of data points and initialize a Population of Regression chromosomes with size 20, head length 6, 3 genes per chromosome, using the summation linker.  We cycle the population for 50 generations, or until it finds an optimal solution.
 {{{
 if __name__ == '__main__':
     # Create a random sample of data points
@@ -75,6 +75,7 @@ if __name__ == '__main__':
         print 'SOLVED:', p.best
 }}}
 
+== Step 4: Profit! ==
 And that's about it!  Here's an example run of the above code:
 {{{
 [Generation: 0  |  Best: #9 (481)  |  Mean: 139.7]
