Edited wiki page through web user interface.

--- a/wiki/PyGEPRoadmap.wiki
+++ b/wiki/PyGEPRoadmap.wiki
@@ -1,12 +1,16 @@
 #summary Where is PyGEP going?
 
 = Introduction =
-These is the development road map going toward a 1.0 release.  I'll add tickets to these as they become pertinent.
+This is the development road map going toward a 1.0 release.  I'll add tickets to these as they become pertinent.
 
+= Current Status =
+== v0.1 beta ==
+ * Ticket #5: Inversion error with head length=1
+ * Ticket #7: Windows installation issues
 
 = Future PyGEP Releases =
 == v0.2 ==
- * Ticket #2: Performance enhancement of population cycling and chromosome evaluation - this hasn't even been breeched yet.
+ * Ticket #2: Performance enhancement of population cycling and chromosome evaluation
  * Ticket #3: It may be useful to change multigenic chromosomes so that, instead of being one list, they are collections of unigenic chromosomes.  That way they could cache sub-ET evaluation results between chromosomes.
 
 == v0.3 ==
