Edited wiki page through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -1,4 +1,5 @@
 #summary If anyone were asking questions, they'd probably be asking these...
+#labels Phase-Implementation,Featured
 
 = Frequently Asked Questions =
 ==== How can I write my own GEP functions? ====
@@ -24,4 +25,3 @@ def sum_linker(*args):
 }}}
 
 If you do not provide a linker for your population, the default linker will simply return the top results of each gene's evaluation.
-
