--- a/branches/pygep-0.2/doc/todo
+++ b/branches/pygep-0.2/doc/todo
@@ -7,12 +7,7 @@ to these as they become pertinent.
 
 Current Status
 --------------
-v0.2
-    * Issue #2: Performance enhancement of population cycling?
-    * Issue #3: It may be useful to change multigenic chromosomes so that, 
-                instead of being one list, they are collections of unigenic 
-                chromosomes. That way they could cache sub-ET evaluation 
-                results between chromosomes. 
+v0.2 beta testing
 
 
 Future Releases
