--- a/wiki/SymbolicRegressionTutorial.wiki
+++ b/wiki/SymbolicRegressionTutorial.wiki
@@ -43,30 +43,37 @@ We import functions for our Regression chromosome `pygep.functions.arithmetic` a
 {{{
 # The chromsomes: fitness is accuracy over the sample
 class Regression(Chromosome):
-    SELECTION_RANGE = 1000.0
+    REWARD = 1000.0
     functions = multiply, add, subtract, divide
     terminals = 'x', 1, 2
-
+    
     def _fitness(self):
-        try:
-            total = sum(self.SELECTION_RANGE - abs(self.evaluate(x)-x.y)
-                        for x in DataPoint.SAMPLE)
-            return int(max(total, 0.0))
-        except:
-            return 0
+        total = 0
+        for x in DataPoint.SAMPLE:
+            try:
+                guess = self(x) # Evaluation of this chromosome
+                diff = min(1.0, abs((x.y - guess) / x.y))
+                total += self.REWARD * (1 - diff)
+                                
+            except ZeroDivisionError: # semantic error
+                pass
 
+        return total
+    
     def _solved(self):
-        return self.fitness >= (self.SELECTION_RANGE * len(DataPoint.SAMPLE))
+        return self.fitness == self.max_fitness
+
+    max_fitness = property(lambda self: self.REWARD * DataPoint.SAMPLE_SIZE)
 }}}
 
 == Step 3: Create a population and run it against our sample ==
-Here we create a sample of data points and initialize a Population of Regression chromosomes with size 20, head length 8, 4 genes per chromosome, using the summation linker.  We cycle the population for 100 generations, or until it finds an optimal solution.
+Here we create a sample of data points and initialize a Population of 30 Regression chromosomes with head length 8 and 4 genes per chromosome, using the summation linker.  We cycle the population for 100 generations, or until it finds an optimal solution.
 {{{
 if __name__ == '__main__':
     DataPoint.populate()
 
     # Search for a solution
-    p = Population(Regression, 20, 8, 4, sum_linker)
+    p = Population(Regression, 30, 8, 4, sum_linker)
     print p
 
     for _ in xrange(100):
@@ -75,112 +82,153 @@ if __name__ == '__main__':
         p.cycle()
         print
         print p
-
+        
     if p.best.solved:
         print
         print 'SOLVED:', p.best
+
 }}}
 
 == Step 4: Profit! ==
 And that's about it!  Here's an example run of the above code:
 {{{
-[Generation: 0  |  Best: #12 (1810)  |  Mean: 1326.4]
+[Generation: 0  |  Best: #12 (901.948355079)  |  Mean: 127.1]
 01234567890123456789012345678901234567890123456789012345678901234567
 --------------------------------------------------------------------
-+x12*/+-21221xxx22/*xx1/+2x1x112x1+/+2-/+-1121x1x11/1+2--1+x21x1x2xx [ 1]: 1331
--x1x/x*1222222211+x22/-1*211x2221x+xx*/*/-xxx1x11x1/+x2/1-+2x1122x2x [ 2]: 1453
-*xx2---*x122211xx-x**-1xx2xx122x1x*/-+*+*1xx122221x+1x/111+112x1xx2x [ 3]: 1466
-*1/++-*/12xxx1211**2+1-/+1xx2x22xx/x+1/xx+21211221x1x-x+//-2112x2x22 [ 4]: 1304
-1xx2/1x21x2x22222+-**+2+*1x1222x1x1-/222+2xx111x12x-*x*/x1*1x122x11x [ 5]: 1223
-221*/12-2xx21x2x1x+12+1122xx2xx122-xx2**/-212x2122xx1/-*/1x1xx122222 [ 6]: 1363
-/x1-22-x2xxxxx1x1//1-///xx22x1xx2x*1+*/*121112xx11x/-+-**x221x2x2xx2 [ 7]: 1258
-+*/++12*2222xx12x--1/*//-xx22211x1x-2+x-++12xx12221/x/+-+*-11112122x [ 8]: 1712
-x*/+*//21x11xxx1x12-+1++xx1x212xx2+2x+1-+211121112112-11xx+x12x1x121 [ 9]: 1359
-/2+-1--122x1xx211-1+-1*x*xx11x1211+x2*xx++21x1xxx11x/1**x/12x2121221 [10]: 1442
-/xx2x+*+22x22x212x/2*-+x*x222x11xxx1-x/1+x21111xxxx2-x+---*x1x2x2xxx [11]: 1361
-1-*+1x221xx1x22xx1+111x2*22x1212xx+--2*1+-1x1121212*+*21+2xx11212111 [12]: 1810
-*x2-x-222111xx112/+x1-x1*x21x2xx22/x2+2*1xx1x2xxx22-1+--*--1x1x11x12 [13]: 1441
-/-/*x-*/2x2x22x2x*/+x-x/x2121xxx2x+/1-1+1*1122x2111+x21**x111x112x21 [14]: 1269
-*+/22+1/x111x1221+2x1-1+/211x2x22x*2*11+x-2221122xx*2111x/222x11x2xx [15]: 1501
-/x*x+/21x112x1121//*++2+1212x2221x*1--x/+/121xxx2x21+1/211*12x2x21xx [16]: 1211
-1+*2+11*11212x112x1*/x2--xxx1x2x12/*2+2**x2122122211-1/1+xxx11121121 [17]: 1410
--/-*xx*x12xx12221x2x11-//11xx2212x1*-2*2/xxx21112211*+1//++1x11x2x22 [18]: 1361
-2x-+--1/x1222222x+2/2++-2x11x2x11x**/x11x2212x121xx11xxx-22x2xxx2222 [19]: 1253
--2*+2+1x2xx11xx112-2-**x+21xx21x2x+2+***x22121x211x*/x1/2+12x2x21x12 [20]: 0
+x1/-xx2+1212112111*2xx+1x2x1x12xx1+2*/1++x1x112xx1x/+/--21/21x121x11 [ 1]: 41.8643334853
+-1+x-x2/22x1111221-+x21-x2x12xxx2xx1++1/2-1x2x1221xx/*1x+-111222x12x [ 2]: 27.1856279876
+*+--/2-1112x2211x/21/1+**212x2x1xx1x+-+*x2x112x1x2x222*-x1/xx12xx2xx [ 3]: 33.9820349845
+*-+22+2/1x211x2xx2/221*/112x121211///1+*x/x1x22211x2*+1//+1222212xxx [ 4]: 28.3784643141
++12/+/*-xx111x1xx1+*x-///21x12x111/x-*1-1*2xx22x111*/x+x2+/122121x1x [ 5]: 56.1285025603
+x22x-11+x21x222111x-2-+x22122112111*2/*/x11x11x1xxx-/12+-*+xx1111212 [ 6]: 73.3371535137
+-+*2+---xxxx22x12-x+x11-*1xxx2xx11-+2+/x2x2121xxx11+-**2++1111221212 [ 7]: 122.777764821
++-/2/2xx111x22121-x21/+-12x21x2x222+122x/+2x22211121/12-2xx21x221xx2 [ 8]: 23.3148690741
+/*x+/2*21111x2x22x1222-2/222112112xx//-1x-x2xxx12xx+//-/12/2xxx22111 [ 9]: 327.229687983
+**-*//+/1x121212x2-2x//xx2x2121222/2+xxx22112122211-xx22*x*22x222211 [10]: 8.36439448302
+2-1//1-*x2x1111122-1xx/-/xx1x11x11+++/+*+2x21x2xx1x*+/+-+1+x11122221 [11]: 463.159979776
+11*xx22*xx1122121+**x+*+12xx22x2x2+x1-x*+*x2121x2x22x-/x1*21x212222x [12]: 901.948355079
++/-1+-1xx2xx222x1/x1x-/xxx21121xx2*2+12+//1122222x11*+1*/*/2x1211222 [13]: 55.102667996
+2+1--+/21x1x22xxx-12/12/1x2x111111+22+1/x/212xx21211+x--2*21221121x2 [14]: 40.7784419814
+x/*22+*21x2211x2x12+*-*xx2x2x11211*22/22+2122xx1x1x+-2**xxx2221xx1x1 [15]: 198.29491454
+/--*x21x12x222121--x2+/1/x22xxx212++xx-2x-x122x2xx11+*2--+21xx212xxx [16]: 25.7228039459
+*1/**/22x21x1121x11+/-+*+2x21xx1x122*/12+122x1x112x***/-2*122x122x2x [17]: 23.3148690741
+*2x*+x/x1x1x2xxx2//*-x1-122221x2212**x*+-+1x1x22122/2/x1/2-x1xx121x1 [18]: 0
+/+/2-*-2xxx121xx2+1x/2+/*2x221xx21+-+12++-2xx2xx1x12x-x/**11x1xx1x11 [19]: 136.873315301
+x*-x-/+1x112111xx+*-22+-1xx2x1x11x**22*++-1211xxxxx/-+/+11x2x1x2x22x [20]: 0.0
+x*2-xx*+2x22112x22+2--1--2x2xx1xx1x**x/*+222122112x*/x1*+/*x2x2122x2 [21]: 291.70854836
++22x-*++xx21x1x21*+1+2/*-2x2x1xxx1x-/-*-x/xx1112222xxx2222+1xx11211x [22]: 376.867409462
+2+112-*21121x22221-+/2-+12112xx11x22*/1+1*xx1221222*+/-x1x2x1x21x12x [23]: 36.9076830679
+xx1-+x/*11x2122x22/*2-1+11xx2111x2+x-*x1-x1122xx2x122*/2xx1x2122122x [24]: 160.060083785
+2*+22x2xx12112xx2/+-1/--/2x12xx222+/2x2-+1x11211x12/2+2+11+x11x21x21 [25]: 47.0076081969
+2+/1*1211222xx112-/xx*1x*1x2xx12212x1-12111x2x1xxx1x1-1*1--x2xx22x12 [26]: 33.9820349845
+2*11+12xxx11xxx1x/*+-++2/1111x211xx/*2--2/21212x222-*12+-112121x2xx1 [27]: 62.2890762491
+1/+-/x1+x111x1122x1-+21*/x2xxxx121+*+1-x*+22212xx11-/2-1-//1x11211x1 [28]: 65.6609034747
+1-1***x2221x2122x2+--2+x1x2x212112/*12/11+x2222x211x+/x/2+2xx2xx2112 [29]: 72.9516538446
+/--1-+*2112x2222x////x1/1x1x22212x2212-*+-xxx2xxx1x+-21/x/+2x2x122xx [30]: 76.7915180236
 
-[Generation: 1  |  Best: #12 (1810)  |  Mean: 1345.0]
+[Generation: 1  |  Best: #43 (901.948355079)  |  Mean: 328.4]
 01234567890123456789012345678901234567890123456789012345678901234567
 --------------------------------------------------------------------
-1-*+1x221xx1x22xx1+111x2*22x1212xx+--2*1+-1x1121212*+*21+2xx11212111 [12]: 1810
-+x12*/+-21211xxx22/*xx1/+2x1x112x1+*+2-/+-1x1121212*+*21-1+x21x1x2xx [40]: 1192
-*xx2---*x122211xx-x**-1xx2xx122x1x*/-+*+*1xx122221x+1x/111+112x1xx2x [ 3]: 1466
-*1/++-*/12xxx1x11**2+1-/+1xx2x22xx/x+1/xx+21211221x1x-x+//-2112x2x22 [22]: 1168
--+x2/1x21x2x22222+-**+2+*1x1222x1x1-/222+1xx111x12x-*x*1x1*1x12xx11x [23]: 1252
-1xx2/1x21x2x22222+-**+2+*1x1222x1x1-/222+2xx111x12x-*x*/x1*1x122x11x [ 5]: 1223
-1xx2/1x21x2x22222+-**+2+x1x1222x1x1-/222+2xx111x12x1*x*/x1*1x122x11x [24]: 1245
-221*/12-2xx21x2x1x+12+1122xx2xx1x2-xx2**/-212x2122x+1/-*/1x11x122222 [25]: 1116
-221*/12-2xx21x2x1x+12+1122xx2xx122-xx2**/-21222122xx1/-*/1x1xx122222 [26]: 1363
-x*/+*//21x1xxxx1x12-+1++xx1x212xx2+2x+1-+211121112112211xx+x12x1x121 [27]: 1359
-/2+-1--122x1xx211-1+-1*x*xx11x1211+x2*xx++21x1xxx11x/1**x/12x2121221 [10]: 1442
-x/2*-+x*x122x11xx/xx2x+*+22x22x212x1-x/1+x21111xxxx-2-x+---x1x2x2xxx [30]: 1150
-1-*+1x221xx1x2xxx1+111x2*22x1212xx+--2*1+-1121x1x11/1+2-+2xx11212111 [39]: 1309
-*+/22+1/x111x1121+2x1-1+/211x2x22x*2*11+x-2221122xx*2111x/222x11x2xx [32]: 1501
-*+/22+1/x111x1221+2x1-1+/211x2x22x*2*11+x-2221122xx*2111x/2x2x11x2xx [33]: 1501
-1+*2+11*11211x112x1*/x2--xxx1x2x12/-2+2**x2111122211-1/1+xxx11121121 [34]: 1364
-1+11+2**11212x112x1*/x2-+xxx1x2x12/*2+2**x2122122211-1/1+xxx11121121 [36]: 1410
--/-*xx*x12xx12221x2x11-//11xx2212x1*-2*2/xxx21112211*+1//++1x11x2x22 [18]: 1361
--/-*xx*x12xx12221x2x11-//11xx2212x1*-2*21/xx21112211*+1//++1x11x2x22 [37]: 1361
-xx-+--+/x1222222x+2/2++-2x11x2211x**/x11x2112x121xx11xxx-22x2xxx2222 [38]: 1308
+11*xx22*xx1122121+**x+*+12xx22x2x2+x1-x*+*x2121x2x22x-/x1*21x212222x [12]: 901.948355079
++22/+/*-xx111x1xx1+*//-x/21x22x111/x-*1-1*2xx22x111*/x+x2+/122121x1x [32]: 62.9249095572
++12/+/*-xx112x1xx1+*x-///21x12x2111x-*1-1*2xx22x111*-x+x2+/122121x1x [33]: 451.624721485
++12/+/*-xx111x1xx1+*x-///21x12x1122x-*1-1*2xx22x111*/x+x2+/122121x1x [34]: 67.9640699689
++-**2++1111221212-x+x11-*1xxx2xx11-+2+/-2x2111xxx11-+*2+---xxxx22x12 [36]: 84.9567240217
+/*x+/+*21111x2x22x122212/222112112xx//-1x-x2xxx12xx+//-/12/2xxx22111 [37]: 283.729345502
+/*x+/2*21111x2x22x122212/222112112xx/+-1x-x2xxx12xx+//-/12/2xxx22111 [38]: 327.229687983
+/*x+/2*x1111x2x22x1222-2/222112112xx//-1x-x2xxx12xx+//-11212xxx22111 [39]: 173.445860542
+2-1//1-*x2x1111122-1xx/-/xx1x11x11+++/+*+2x21x2xx1x*+/+-+1+x11122221 [11]: 463.159979776
+11*xx22*xx1122121+**x+*+12xx22x2x2+x1-x*+*x2221x2x22x-/x1*21x212222x [40]: 901.948355079
+11*xx22*xx1122121+**x+*+12xx22x2x2+x2-x++*x2121x2x2+x-/x1*21x212222x [41]: 895.151948082
+11*xx22*xx1122121+**x+*+12xx22x2x2+x1-x*+*x2121x2x22x-/x1*21x2122221 [42]: 901.948355079
+11*x-22*xx1122121+**x+*+12xx22x2x2+x1-x*+*x2121x2x22x-/x1*21x212222x [43]: 901.948355079
+2+1-++/21x1x22xxx-12/12/1x2x112111+22+1/x/212xx21211+x--2*21221121x2 [44]: 40.7784419814
+x**22+*21x2211x2x+-2**xxx2221121x1*22/22+2122xx1x1x12+*-*+x2x2x11211 [46]: 198.29491454
+x/*22+*21x2211x2x12+*-*xx2x2x11211*22/22+2122x21x1x+-2**xxx2221xx1x1 [47]: 198.29491454
+x/222+*21x2211x2x12+*-*xx2x2x11211*22/22+2122xx1x1x+-2**xxx2221xx1x1 [48]: 198.29491454
+x*2-2x*+2x22112x22+2--1--2x2xx1xx1x**x/*+222122112x*/x1*+/*x2x2122x2 [49]: 291.70854836
+x**x/*+222122111x2+2--1--2x2xx1xx1**2-xx*+2x22112x2*/x1*+/*x2x2122x2 [51]: 156.045360506
+x*2-xx*+2x22112x22+2--1--2x2xx1xx1x**x/*+222122112x*/x1*+/*x2x2122x2 [21]: 291.70854836
++22x-*++xx21x1x21*+1+2/*-2x2x1xxx1x-/-*-x/xx1112222xxx2222+1xx11211x [22]: 376.867409462
++22x-*++x221x1x21*+1+2/*-1x2x1xxx1x-/-*-x/xx1112222xxx2222+1xxx1211x [52]: 433.614651354
++22x-*++xx21x1x21*+1+2/*-2x2x1xxx1x-/-*-2/xx1112222xxx2222+1xx11211x [53]: 376.867409462
+xx1-+2/*11x2122x22/*2-1+11xx2111x2+x-*x1-x1122xx2x122*/2xx122122122x [54]: 160.060083785
+xx1-+x/*11x2122x22/*2-1+11xx2111x2+x-*x1-x1122xx2x122*/2x/1x2122122x [55]: 160.060083785
+2/*2-1-11xx2111x2xx1-+x/*11x2122x2+x-*x1-x1122xx2x1*x122*/2x2122122x [58]: 286.940344327
+2*+22121x12112xx2/+-1/--/2x12xx222+/1x2-+1x11211x12/2+2*11+x11x21x21 [59]: 41.3771369261
+/*+-++2/2111x211x2*11+12+xx11xxx1xx/*2--2/21212x222-*12+-112121x2xx1 [61]: 86.7229302709
+2*11+12xxx11xxx1x/*+-++2/1111x211xx/*2--2/21212x222-*12+-112121x2xx1 [27]: 62.2890762491
+1-1***x2221x2122x2+--2+x1x2x212112/*12/11+x2222x2x1x+/x/2+2xx2xx2112 [62]: 72.9516538446
 
 ... snip ...
 
-[Generation: 54  |  Best: #1197 (9990)  |  Mean: 6952.9]
+[Generation: 41  |  Best: #1403 (9946.0428185)  |  Mean: 7592.5]
 01234567890123456789012345678901234567890123456789012345678901234567
 --------------------------------------------------------------------
-1+-++2/2x21212x1x*--*-+1x22xx212xx***x+xx22xx1x21xx++-x+-*x2x1x2112x [1197]: 9990
-1+-++2/2x21212x1x*--*-+1x22xx212xx***x+xx22xx1x21xx++-x--*x2x1x2112x [1270]: 9950
-1+-++2/2x21212x1x*--*-+1x22xx212x2***x+xx22xx1x21xx++-x+-*22x1xx11xx [1271]: 9678
-1+x++2/2x21212x1x*--*-+1x2xxx212xx**/x+xx22xx1x21xx++-x+-*x2x1x21122 [1272]: 1571
-+/2++-+2x21212x1x***++-x+211x2122x***x+xx22xx1x21xx2--*-+1x22xx212xx [1250]: 7609
-2/2++-+2x21x12x1x*1xx--*-22xx212xx***x+xx22xx1x21xx-+-+x+1x22xx212xx [1273]: 9036
-*2/-++-+x21212x1x***++-x+211x112xx*x**+xx22xx1x21xx*--*-x1x22xx212xx [1290]: 6688
-1+-++2/2x21212x1x*--*-+1x22xx2122x***x*-*x2xx1x21xx++-x+-*xx11x2112x [1291]: 1295
-1+-++2/2x21212x1x*--*-+1x22xx112xx***x*xx222x1xx1xx++-x+-*x211x2112x [1277]: 9791
-1+-++2/2x21112x1x*--*-+1x22xx112xx***x*xx22xx1x21xx+/-x+-*x211x21122 [1278]: 9691
-**2+-++2221212x1x***x+xx222x1x21xx*--*-+1x22xx112xx++-x+-*x2x1x2112x [1280]: 9846
-2+-++2/2x21212x1x***1x+xx22x1x21xx*--*-+1x22xx112xx++-x+-*x2x1x2112x [1281]: 3267
-2+-++2/2x21212x1x***x+xx222x1x21xx*--*-+1x22xx112xx++-x+-*x2x1x2112x [1255]: 9842
-2+-++2/2x21212x1x***x+xx222x1x21xx*--*-22+22xx112xx++-x+-*x2x1x2112x [1282]: 9039
-**2++-+2xxx2x2x1x---+x*2-2x1x21x22*2***x+x2xx1x21xx*+2x--*-22xx212xx [1283]: 1017
-**2++-+1x2x2x2x1x---+x*2-2x1x21x22***x+xx22xx1x21xx*+2x--*-22xx212xx [1284]: 9013
-**2/+-+2x222x2x1x*2*++-x+211x2122x+-*/*x2x2x21x21xx*--*-*x12x2121x22 [1286]: 1307
---x+x*x12x2121x22*1x21xx-22xx212xx***x+xx22xx1x21xx**2++-+2x222x2x1x [1287]: 9665
-**2++-+2x222x2x1x*1xx--*-22xx2121x***x+xx22xx1x21xx---+x*x12x2121x2x [1288]: 9694
-*/2++-+2x21212x1x-1-/*x+122xx212xx***x+2x22xx1x212x+x-x+-*x2x1x2122x [1289]: 1069
+*+x/*x221xx11x2x1*1+/+*2-2xx2222x211*2122*xx2122221*+*1*x*+x2x11222x [1226]: 9946.0428185
+*+x/*x221xx11x2x111*2122+xx2122221*1+/+*2-2xx2222x2***1*x*+x2x11222x [1400]: 9150.23350122
+*+x/*x/21xx11x2x1*1+/+*2-2xx2222x211*2122*xx2122221*+*1*x*+xxx12222x [1401]: 0.0
+*+x/*x-21xx11x2x1*1+/+x2-2xx2222x211-2222*xx2122221*+*1*x*+x2x12222x [1402]: 0
+*+x/*x221xx11x2x1*1+/+*2-2xx2222x211*2222*xx2122221*+*1*x*+x2x11222x [1403]: 9946.0428185
+*+x/-x222xx11x2x1*1+/+*2-2xx2222x2*+1x*212xx2122221*+*1*x*+x2x11222x [1404]: 9859.7339627
+*+x/-x222xx12x2x1*1+/+*2-2xx2222x21x*2122*xx2122221*+*1*x*+x2x11222x [1405]: 9773.01103243
+*+x1*x221xx11x21111*x1+/+21x1222xx*1+/+2*22x12xx2xx*+*1*x*+x2x11222x [1365]: 9418.96319884
+*+*1*x*+x2x11222x11*x1+/+21x1222xx*1+/+2*22x122x2xx*+x1*x221xx11x211 [1406]: 9418.96319884
+*x2*+x1*1xx11x211+211*212xx212x12122+/+1*22x122x2xx*+*1*x*+x2x11222x [1407]: 9656.05252286
+*x2*+x1*1xx11x2112211*212xx212x12121+/+2*22x1x2x2xx*+*1*x*+x2x11222x [1408]: 9629.07393211
+*2*x2*+x1xx11x211+211*212xx212x12121+/+2*22x122x2xx*+*1*x*+x2x11222x [1409]: 9591.77634123
+*x2*+x1-1xx11x2111112*2**xx2x2x121*1+/+2*22x122x2xx*+*1*x*+22x1x222x [1410]: 8547.37760938
+*x2-1-+*1xx21x2111112*2**xxx12x121*1+/+2*x2x122x2xx*+*1+x*+x2x11222x [1412]: 4812.45184351
+*x2*+x1-12x11x2111112*2**xx212x121*1+/+2*22x122x2xx*+*1*x*-x2x11222x [1413]: 474.289046614
+*x2*+x1*1xx11x21111*212**xx212x121*1+/+22222122x2xx*+*1*x*+x2x11222x [1371]: 9683.03111362
+*x2*+x1*1xx11x21111*212*+xx212x121*1+++22222122x2xx*+21*x*+x2x11222x [1414]: 4753.43031906
+**+x/-x212x11x2xx*x*/21*+2xx1222x2x/*/1/2+xx2122x21*+*1*x*+x2x1x222x [1415]: 0.0
+**+x--x212211x2xx1+*1*x*+x2x11222x+x/*/+22xx2122x21*x*/21*+2xx1222xx [1417]: 481.561282147
+-//+*x2/xxx11x2xx*1**1*112xx2222xx122212x+x111x2121*2*+*1*xx2x112222 [1419]: 9634.63727034
+*+//-x2-xxx11x2xx*1**1***2xx2222xx1+2212x+x111x2121*2*+*1*xx2x112222 [1420]: 6772.69093739
+*1+*+x/-1x1x1x211**x2121*xx212x1211/11122+xxx122121*2*+*1*xx2x112222 [1421]: 9899.89129297
+*1+*+x/-1xxx1x211**x2121*xx212x1211/12122+xxx122121*2*+*1*xx2x112122 [1422]: 9483.86197823
+*1+*1x/-1xx11x211**x2121*xx212x1211/1212/+xx2122121*x*2*+*1x2x111222 [1424]: 9521.15956911
+*1+*12/-1xx11x211-*x21*1*xxx12x1211/12122+xx2122121*2*+*1*xx2x112222 [1425]: 9592.87225832
+*1+*+x/-1xx11x2x1**1//+/+21x2222xx1/12122+xx2122121*2*+*1*xx2x1x2222 [1426]: 9596.9358413
+/*1+*+x/1xx11x2x1--1/1+/+21x2222xx1/12122+xx2122121*2*+*1*xx2x112222 [1427]: 9171.04887957
+*+x/-xx212x1xx2x11/**1x2*xx2122x2x/222**//2xx122xxx*+*1*x*+x2x112122 [1430]: 9575.11675061
+*+x/-xx212x1xx2x1/22*//+12xx222xxx1/**1x2*xx2122x21*+*1*x*+x2x112121 [1431]: 9575.11675061
+*+x/-x2212x1xx2x1*/2*+/+12xx2222x22x22111*xx2122121*+*1*x*+x2x112122 [1432]: 9810.40296774
 
-[Generation: 55  |  Best: #1310 (10000)  |  Mean: 7608.2]
+[Generation: 42  |  Best: #1457 (10000.0)  |  Mean: 6388.9]
 01234567890123456789012345678901234567890123456789012345678901234567
 --------------------------------------------------------------------
-1+-++2/2x21212x1x*--*-+1x22xx212xx***x+xx22xx1x21xx++-x+-*x2x1x2112x [1197]: 9990
-1+-++2/2x21212x1x*--*-+1x22xx212xx***x+xx22xx1x21xx++-x+-*x2x1x2122x [1292]: 9990
-122x/2++x21212x1x*--*-+1x22xx212xx***x+xx22xx1x21xxx+-x+-*x2x1x2112x [1317]: 9980
-1+-++2/2x21212x1x*--*-+1x22xx212xx***x+xx22xx1x21xx++-x+-*x2x1x2112x [1197]: 9990
-*--*-+1x22xx212xx1+-++2/2x21212x1x***x+xx22xx1x2xxx++-x--*x2x1x2112x [1316]: 9950
-1+-++2/2x21212x1x++-x+-*22x1xx11xx***x+xx22xx1x212x*--*-+1x22xx212x2 [1298]: 9678
-1+x++2/2x21212x1x*--*-+1x2xxx212xx**+x+xx22xx1x21x1++-x+-*x2x1x21122 [1299]: 1181
-+/2++-+2x21212x1x***++-x+211x2122x***x+xx22xx1x21xx*-+2--*-22xx212xx [1300]: 7545
-1+-++2/2x21222x1x***--*-+12xx112xx***xx*xx22x1xx1xx++-x+-*x211x2112x [1303]: 0
-1+2++2/2x21212x1x*2-*-+1x22xx112xx**/x*xx222x1xx1xx++-x+-*x211x2112x [1314]: 1448
-1+-++2/2x21212x1x*--*-+1x22xx112xx***x*xx212x1xx1xx++-x+-*x211x2112x [1315]: 5439
-1+-++2/2xxx112x1x*--*-+1x22x1112xx***x*xx22xx1121xx+/-x++*x211x21122 [1306]: 9030
-**2+-++22212x2x1x***x+xx222x1x21xx*--*-+1x22xx112xx+++-x+-*2x1x2112x [1308]: 9945
-**2+-++2221212x1x***x+xx222x1x21xx*--*-+1x22xx1121x++-x+-*x2x1x2112x [1309]: 9846
-2+-++*/2x21212x1x***x+xx222x1x21xx*--*-+/x22xx112xx++-x+-*x2x1x2112x [1310]: 10000
-2+-++2/2x21212x11+***x+xx22x1x11xx*--*-+1x22xx112xx++-x+x*x2x1x2112x [1312]: 1219
-2+-++2/1x21212x1x***x+xx222x1x21xx*--*-+1x22x1112xx++-x+-*x2x1x2112x [1313]: 9013
-2+-++2/2x21212x1x***x+xx222x1x21xx*--*-+1x22xx112xx++-x+-*x2x1x2112x [1255]: 9842
-2+-++2/2x21212x1x***x+xx222x1x21xx*--*-22+22xx112xx++-x+-*x2x1x2112x [1282]: 9039
-2+-++2/2x21212x1x***x+xx222x1x21xx*--*-22+22xx112xx++-x+-*x2x1x2112x [1282]: 9039
+*+x/*x221xx11x2x1*1+/+*2-2xx2222x211*2222*xx2122221*+*1*x*+x2x11222x [1403]: 9946.0428185
+*+x/*2x21xx11x2x1*1+/+*2-2xx222xx211*2122*xx2122221*+*11x*+x2x11222x [1434]: 4792.51943321
+*+x/*x221xx11x2x2*1+/+*2-2xx2222x211*2122*xx2122221*+*1*x*+x2x11122x [1435]: 9946.0428185
+*+x/*x221xx11x2x111*2-22+xx2122221*1+/+*2-2xx2222x2***1*x*+x2111222x [1436]: 1011.88670554
+*+x/*x221xx11x2x1*1+/+*2-2xx2222x221*2222*xx2122221*+*1*x*+x2x11222x [1437]: 9919.06422775
+*+x/*x221xx11x2x1*1+/+*2-2xx2222x21+*2222*xx2122221*+*1*x*+x2x11222x [1438]: 9946.0428185
+*+x/-x222xx11x2x1*1+/+*2-2xx22x2x2*+1x*112xx2122221*11*+*1*x2x11222x [1440]: 245.87630976
+*+x/-x222xx11x2x1*1+/+*2-2xx2222x2*+1x*212xx2122221*+*1*x*+x2x11222x [1404]: 9859.7339627
+*+x/-x222xx12x2x1*1+/+*2-2xx2222x21+*1*x*+x2x11222x1x*2122*xx2122221 [1442]: 211.891001655
+*+x/-x222xx12x2x1*1+/+*2-2xx2222x21x*x122*xx2122x21*+*1*x*+x2x11222x [1443]: 9773.01103243
+*+x/-x222xx12x2x1*1+/+*2-2xx2222x21x*2122*xx2122221++*1*x*+x2x11222x [1444]: 649.272365201
+*+*1*x*+x2x11222x11*x1+/+21x1222xx*1+/+2*22x12xx2xx*xx1*x221xx11x211 [1446]: 9762.96826788
+*x2*+x1*1xx11x211+211*212xx212x121*+*1*x*+x2x11222x222*1+/+2x122x2xx [1448]: 9656.05252286
+*x2*+x1*1xx11x211+211*212xx212x12122+/+1*22x122x2xx*+*1*x*+x2211222x [1449]: 1715.53687296
+*x2/+x1*1xx11x211+211*212xx222x12122+/+1*22x122x2xx*+*1*x*+x2x11222x [1450]: 9656.05252286
+*x2*+x1-1xx1122111112*2**xx2x2x121*1+/+2*22x122x2xx*+*1*x/+22x1x222x [1451]: 470.137486805
+*x2--1-+1xx21x2111112*2**xxx12x121*1+x+2*xxx122x2xx*+11+x*+x2x11222x [1453]: 600.508223956
+*x2++x1*1xx11x11111*212**xx212x121*1+/+22222122x2xx*+*1*x*+x2x11222x [1454]: 9683.03111362
+*x2*+x1*1xx12x21111*212**xx212x121*1+/+22222122x2xx*+*1*x*+x2x11222x [1455]: 9683.03111362
+*x2*+x1*1xx11x21111*212*+xx212x121*1+++22222122x2xx*+21*x*+x2x11222x [1414]: 4753.43031906
+**+x--x212211x2xx1+*1*x*+x2x11222x+x/*/+22xx2122x21***x*/212xx1222xx [1456]: 672.886122832
+*1+*+x/-1x1x1x211**x2121*xx212x1211/11122+xxx122121*2*+*1*xx2x112222 [1421]: 9899.89129297
+*1+*+x/-1xxx1x211**x2121*xx212x1211/12122+xxx122121*2*+*1*xx2x112122 [1422]: 9483.86197823
+*1+*+x/-1xxx1x211**xx121*xx212x1211/12122+xxx122121*2*+*1*xx2x112122 [1457]: 10000.0
+*1+*+x/-1xxx1x211**x2121*xx212x1211/12122+xxx122121*2***1*xx2x112122 [1458]: 8580.13829795
+21+*12/-1xx11x211-*x21*1*xxx12x1211/12122+xx2122121*2*+*1*x22x112222 [1459]: 1613.58094864
+*+x/-xx22221xx2x11/**1x2*xx2122x2x/222**//2xx122xxx*x11*x*+x2x112122 [1460]: 173.445860542
+*+x/-xx212x1xx2x11/**1x2*xx2122x2x/222**//2xx122xxx*+*1*x*+x2x112122 [1430]: 9575.11675061
+*+x/-xx212x1xx2x1/22*//+12xx222xxx1/**1x2*xx2122x21*+*1*x*+x2x112121 [1431]: 9575.11675061
+*+x/-x2212x1x22x1*/2*+/+12xx2221x22x22111*xx2122121*+*1*x*+x2x112122 [1461]: 9810.40296774
 
-SOLVED: 2+-++*/2x21212x1x***x+xx222x1x21xx*--*-+/x22xx112xx++-x+-*x2x1x2112x
+SOLVED: *1+*+x/-1xxx1x211**xx121*xx212x1211/12122+xxx122121*2*+*1*xx2x112122
 }}}
