--- a/wiki/PyGEPRoadmap.wiki
+++ b/wiki/PyGEPRoadmap.wiki
@@ -5,17 +5,20 @@
 This is the development road map going toward a 1.0 release.  I'll add tickets to these as they become pertinent.
 
 = Current Status =
-=== v0.1 ===
- * Issue #5: Inversion error with head length=1
- * Issue #7: Windows installation issues
+v0.2 beta testing
 
 = Future PyGEP Releases =
-=== v0.2 ===
- * Issue #2: Performance enhancement of population cycling and chromosome evaluation
- * Issue #3: It may be useful to change multigenic chromosomes so that, instead of being one list, they are collections of unigenic chromosomes.  That way they could cache sub-ET evaluation results between chromosomes.
-
 === v0.3 ===
  * Issue #8: random numerical constants (RNCs) via the special '?' terminal
- * More demos!
  * Improvements to the function and linker libraries.
+
+=== v0.4 ===
+ * Issue #10: conversion of GEP chromosomes to Python code
+ * Issue #11: provide .deb packages
+
+=== v0.5 ===
+ * ADFs via hemeotic genes
+
+
+
 
