Edited wiki page through web user interface.

--- a/wiki/ApiLinkers.wiki
+++ b/wiki/ApiLinkers.wiki
@@ -4,5 +4,6 @@
 `pygep.functions.linkers` provide two standard GEP linkers for linking the evaluation of genes.  These are passed to ApiPopulations during instantiation. 
 
 = Linkers =
+ * *default_linker*: returns a single result of evaluation for unigenic chromosomes, a tuple of results for multigenic
  * *sum_linker*: adds the results each gene's evaluation
  * *or_linker*: boolean ORs the results of each gene's evaluation
