Edited wiki page through web user interface.

--- a/wiki/ApiChromosomes.wiki
+++ b/wiki/ApiChromosomes.wiki
@@ -9,7 +9,7 @@ PyGEP provides a Chromosome base class which must be overridden to provide probl
  * *terminals*: tuple of terminal symbols.  These can be either attributes for some data object or numeric constants.
 
 = Important Methods =
- * `_fitness(self)`: determines the fitness of a given individual.  This is cached by the `fitness` property.  Typically one will call `self.evaluate(obj)` one or more times where `obj` is some instance containing the terminal symbols as attributes.  _(Abstract)_
+ * `_fitness(self)`: determines the fitness of a given individual.  This is cached by the `fitness` property.  Typically one will call `self(obj)` one or more times where `obj` is some instance containing the terminal symbols as attributes.  _(Abstract)_
  * `_solved(self)`:  `True` if the problem is optimally solved.  By default this returns `False`.  Only override this if a given problem can be solved optimally and you can determine when that is the case.  Boolean return value is stored on `self.solved`.
 
 = Example =
@@ -28,7 +28,7 @@ This is entirely arbitrary but it does illustrate the concepts behind Chromosome
         terminals = 'a', 1, 2
 
         def _fitness(self):
-            return self.evaluate(mydata)
+            return self(mydata)
 
         def _solved(self):
             return self.fitness == 20
