--- a/tags/pygep-0.2.1-beta/doc/news
+++ b/tags/pygep-0.2.1-beta/doc/news
@@ -1,4 +1,5 @@
-2007-05-16: PyGEP 0.2.0 alpha release
+2007-05-19: PyGEP 0.2.1 beta release
+2007-05-16: PyGEP 0.2.0 dev release
 2007-05-01: PyGEP 0.1.3 beta release
 2007-04-21: PyGEP 0.1.2 beta release
 2007-04-14: PyGEP 0.1.1 beta release
