#13: addings simple verification tests for new non-terminals

--- a/trunk/pygep/doc/todo
+++ b/trunk/pygep/doc/todo
@@ -6,22 +6,22 @@ This is the development road map going toward a 1.0 release.
 
 Current Status
 --------------
-v0.2 beta testing & v0.3 development
+v0.3.0 dev
+    * Issue #3: minor optimizations to gene evaluation 
+    * Issue #13: Built-in function library hierarchy
+      - Reorganization of pygep.functions.mathematical hierarchy 
+      - For each function package, provide tuples to access related functions
+      - Standardization of names (function_op or function_linker)
+	* Issue #19: review interpretation of non-mutation rates
+	* Issue #20: match GEP spec on gene transposition
+    * Issue #15: Should GEP NCs convert to floating point by default
 
 
 Future Releases
 ---------------
-v0.3
-    * Issue #3: minor optimizations to gene evaluation 
+v0.3.1
     * Issue #8: random numerical constants (RNCs) via the special '?' terminal
-    * Issue #13: Built-in function library hierarchy
-      - Reorganization of pygep.functions hierarchy to accommodate more:
-        - Add min_op, max_op, ln_op, log2_op, log10_op, etc.
-      - For each function package, provide an ALL (or something) tuple
-      - Standardization of names (all like function_op or function_linker)
-      - Determine whether or not to use function closure by default
-    * Issue #15: Should GEP NCs convert to floating point by default
-	* Issue #19: review interpretation of non-mutation rates
+	* Issue #13: potential improvements to logical functions library
 
 v0.4
     * Issue #17: ADFs via homeotic genes
